# depi

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  services.py  tests.py
depi/: __init__.py  services.py
tests/: README.md  __init__.py  benchmarks.ipynb  run-benchmarks.bat  test_benchmarks.py  test_depi.py  test_django.py  test_fastapi.py  test_flask.py  test_quart.py  test_services.py  tests.py
